# pygenetics

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml  run_tests.yml
examples/: example_maximize_integers.py  example_minimize_integers.py  minimize_integers.py  select_ecnet_inputs.py
pygenetics/: __init__.py  ga_core.py  member.py  parameter.py  population.py  selection_functions.py  utils.py
tests/: test_all.py
tests/unit_tests/: member.py  parameter.py  population.py  utils.py
